--- a/html/404.html
+++ b/html/404.html
@@ -9,5 +9,8 @@
     </script> -->
     <!-- <meta http-equiv="refresh" content="0;URL='/'" /> -->
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/pages/404/404.tsx"></script>
+  </body>
 </html>
