multi page build

--- a/html/404.html
+++ b/html/404.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/pages/404/404.tsx"></script>
+    <script type="module" src="/src/pages/404/index.tsx"></script>
   </body>
 </html>
