--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/RW.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Yanning(George) Zhao</title>
+    <style>
+      body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            place-items: center;
+            min-width: 320px;
+            min-height: 100vh;
+        }
+    </style>
   </head>
   <body>
     <div id="root"></div>
