add sider and home page

--- a/html/home.html
+++ b/html/home.html
@@ -15,14 +15,9 @@
             min-height: 100vh;
         }
     </style>
-    <script type="module" crossorigin src="/assets/app-DJnSsG8C.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/client-BA2MgDpo.js">
-    <link rel="modulepreload" crossorigin href="/assets/home-7UwBCZ6l.js">
-    <link rel="modulepreload" crossorigin href="/assets/problems-DOZ4gio4.js">
-    <link rel="stylesheet" crossorigin href="/assets/home-DGumi1u-.css">
-    <link rel="stylesheet" crossorigin href="/assets/app-CEAzZymE.css">
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/pages/home/index.tsx"></script>
   </body>
 </html>
