--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/pages/home/index.tsx"></script>
+    <script type="module" src="/src/pages/app/index.tsx"></script>
   </body>
 </html>
