--- a/html/404.html
+++ b/html/404.html
@@ -12,5 +12,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/pages/404/index.tsx"></script>
+    <script>
+      // redirect to index when refreshing page
+      if (performance.navigation.type === 1) {
+        window.location.href = '/';
+      }
+    </script>
   </body>
 </html>
