--- a/html/problems.html
+++ b/html/problems.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/pages/problems/index.tsx"></script>
+    <script>
+      // redirect to index when refreshing page
+      if (performance.navigation.type === 1) {
+        window.location.href = '/';
+      }
+    </script>
   </body>
 </html>
