--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,23 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yanning(George) Zhao</title>
     <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            place-items: center;
-            min-width: 320px;
-            min-height: 100vh;
+      html {
+        scrollbar-width: 2;
+
+        ::-webkit-scrollbar {
+          width: 2px;
+          height: 0;
         }
+
+        ::-webkit-scrollbar-track {
+          background-color: transparent;
+        }
+
+        ::-webkit-scrollbar-thumb {
+          background-color: gray;
+          border-radius: 10px;
+        }
+      }
+      body {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        place-items: center;
+        min-width: 320px;
+        min-height: 100vh;
+      }
     </style>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
       // redirect to index when refreshing page
       if (performance.navigation.type === 1) {
-        window.location.href = '/';
+        window.location.href = "/";
       }
     </script>
   </body>
