--- a/html/home.html
+++ b/html/home.html
@@ -1,19 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/RW.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yanning(George) Zhao</title>
     <style>
       body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            place-items: center;
-            min-width: 320px;
-            min-height: 100vh;
-        }
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        place-items: center;
+        min-width: 320px;
+        min-height: 100vh;
+      }
     </style>
   </head>
   <body>
@@ -22,7 +20,7 @@
     <script>
       // redirect to index when refreshing page
       if (performance.navigation.type === 1) {
-        window.location.href = '/';
+        window.location.href = "/";
       }
     </script>
   </body>
