--- a/html/problems.html
+++ b/html/problems.html
@@ -1,10 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
@@ -12,7 +10,7 @@
     <script>
       // redirect to index when refreshing page
       if (performance.navigation.type === 1) {
-        window.location.href = '/';
+        window.location.href = "/";
       }
     </script>
   </body>
