--- a/html/resume.html
+++ b/html/resume.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/pages/404/index.tsx"></script>
+    <script type="module" src="/src/pages/resume/index.tsx"></script>
     <script>
       // redirect to index when refreshing page
       if (performance.navigation.type === 1) {
